<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:id="@+id/pokemons_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/pokemons_surnom_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pokemons_surnom_label"/>
            <TextView
                android:id="@+id/pokemons_surnom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_surnom_label" />
            <TextView
                android:id="@+id/pokemons_niveau_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_surnom"
                android:text="@string/pokemons_niveau_label"/>
            <TextView
                android:id="@+id/pokemons_niveau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_niveau_label" />
            <TextView
                android:id="@+id/pokemons_capture_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_niveau"
                android:text="@string/pokemons_capture_label"/>
            <TextView
                android:id="@+id/pokemons_capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_capture_label" />
            <TextView
                android:id="@+id/pokemons_typepokemon_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_capture"
                android:text="@string/pokemons_typepokemon_label"/>
            <TextView
                android:id="@+id/pokemons_typepokemon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_typepokemon_label" />
            <TextView
                android:id="@+id/pokemons_attaque1_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_typepokemon"
                android:text="@string/pokemons_attaque1_label"/>
            <TextView
                android:id="@+id/pokemons_attaque1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_attaque1_label" />
            <TextView
                android:id="@+id/pokemons_attaque2_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_attaque1"
                android:text="@string/pokemons_attaque2_label"/>
            <TextView
                android:id="@+id/pokemons_attaque2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_attaque2_label" />
            <TextView
                android:id="@+id/pokemons_attaque3_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_attaque2"
                android:text="@string/pokemons_attaque3_label"/>
            <TextView
                android:id="@+id/pokemons_attaque3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_attaque3_label" />
            <TextView
                android:id="@+id/pokemons_attaque4_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pokemons_attaque3"
                android:text="@string/pokemons_attaque4_label"/>
            <TextView
                android:id="@+id/pokemons_attaque4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/pokemons_attaque4_label" />
        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/pokemons_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/pokemons_not_found" />
</RelativeLayout>
